--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,3 @@
-
 name: 部署文档
 
 on:
@@ -13,40 +12,64 @@ jobs:
   deploy-gh-pages:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      # 1. checkout wiki
+      - name: Checkout Wiki
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          # submodules: true
 
+      # 2. checkout 编辑器分支
+      - name: Checkout Web Editor
+        uses: actions/checkout@v4
+        with:
+          repository: YWZJ-Studio/ywzj_vehicle
+          ref: 1.20.1-dev-webeditor
+          path: webeditor-src
+
+      # 3. pnpm
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
 
-
+      # 4. Node
       - name: 设置 Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: pnpm
 
-      - name: 安装依赖
+      # 5. 安装 wiki 依赖
+      - name: 安装 Wiki 依赖
         run: |
           corepack enable
           pnpm install --frozen-lockfile
 
+      # 6. 构建 wiki
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
+        run: |
           pnpm run docs:build
           > src/.vuepress/dist/.nojekyll
 
+      # 7. 构建编辑器
+      - name: 构建 Web Editor
+        run: |
+          cd webeditor-src/webeditor
+          corepack enable
+          pnpm install --frozen-lockfile
+          pnpm run build
+
+      # 8. 合并编辑器到 wiki 产物
+      - name: 合并 Web Editor 到 Pages
+        run: |
+          mkdir -p src/.vuepress/dist/editor
+          cp -r webeditor-src/webeditor/dist/* src/.vuepress/dist/editor/
+
+      # 9. 部署到 gh-pages
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # 部署文档
           branch: gh-pages
           folder: src/.vuepress/dist
