--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -57,9 +57,8 @@ jobs:
       - name: 构建 Web Editor
         run: |
           cd webeditor-src/webeditor
-          corepack enable
-          pnpm install --frozen-lockfile
-          pnpm run build
+          npm install
+          npm run build
 
       # 8. 合并编辑器到 wiki 产物
       - name: 合并 Web Editor 到 Pages
