--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -53,17 +53,13 @@ jobs:
           pnpm run docs:build
           > src/.vuepress/dist/.nojekyll
 
-      - name: 设置 Node.js（Web Editor）
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
       # 7. 构建编辑器
-      - name: 构建 Web Editor
+      - name: 构建 Web Editor（pnpm）
         run: |
           cd webeditor-src/webeditor
-          npm install
-          npm run build
+          corepack enable
+          pnpm install --no-frozen-lockfile
+          pnpm run build
 
       # 8. 合并编辑器到 wiki 产物
       - name: 合并 Web Editor 到 Pages
